# c2024-a

./: .gitignore
level1/: CMakeLists.txt
level1/p01_running_letter/: main.c
level1/p02_is_prime/: main.c
level1/p03_all_primes/: main.c
level1/p04_goldbach/: main.c
level1/p05_encrypt_decrypt/: main.c
level1/p06_hanoi/: main.c
level1/p07_maze/: main.c
level1/p08_push_boxes/: main.c
level1/p10_warehouse/: item.c  main.c  ui.c  ui.h
level2/NeuralNetworks/: main.py
level2/SkipList/: item.h
